@@ -1452,77 +1452,87 @@ function getTriggerOverviewCells($trigger, $pageFile, $screenId = null) {
 	return $column;
 }
 
-function calculate_availability($triggerid, $period_start, $period_end) {
-	$start_value = TRIGGER_VALUE_FALSE;
-	if ($period_start > 0 && $period_start <= time()) {
+/**
+ * Calculate trigger availability.
+ *
+ * @param int $triggerId		trigger id
+ * @param int $startTime		begin period
+ * @param int $endTime			end period
+ *
+ * @return array
+ */
+function calculateAvailability($triggerId, $startTime, $endTime) {
+	$startValue = TRIGGER_VALUE_FALSE;
+
+	if ($startTime > 0 && $startTime <= time()) {
 		$sql = 'SELECT e.eventid,e.value'.
 				' FROM events e'.
-				' WHERE e.objectid='.zbx_dbstr($triggerid).
+				' WHERE e.objectid='.zbx_dbstr($triggerId).
 					' AND e.source='.EVENT_SOURCE_TRIGGERS.
 					' AND e.object='.EVENT_OBJECT_TRIGGER.
-					' AND e.clock<'.zbx_dbstr($period_start).
+					' AND e.clock<'.zbx_dbstr($startTime).
 				' ORDER BY e.eventid DESC';
 		if ($row = DBfetch(DBselect($sql, 1))) {
-			$start_value = $row['value'];
-			$min = $period_start;
+			$startValue = $row['value'];
+			$min = $startTime;
 		}
 	}
 
 	$sql = 'SELECT COUNT(e.eventid) AS cnt,MIN(e.clock) AS min_clock,MAX(e.clock) AS max_clock'.
 			' FROM events e'.
-			' WHERE e.objectid='.zbx_dbstr($triggerid).
+			' WHERE e.objectid='.zbx_dbstr($triggerId).
 				' AND e.source='.EVENT_SOURCE_TRIGGERS.
 				' AND e.object='.EVENT_OBJECT_TRIGGER;
-	if ($period_start != 0) {
-		$sql .= ' AND clock>='.zbx_dbstr($period_start);
+	if ($startTime) {
+		$sql .= ' AND e.clock>='.zbx_dbstr($startTime);
 	}
-	if ($period_end != 0) {
-		$sql .= ' AND clock<='.zbx_dbstr($period_end);
+	if ($endTime) {
+		$sql .= ' AND e.clock<='.zbx_dbstr($endTime);
 	}
 
-	$db_events = DBfetch(DBselect($sql));
-	if ($db_events['cnt'] > 0) {
+	$dbEvents = DBfetch(DBselect($sql));
+	if ($dbEvents['cnt'] > 0) {
 		if (!isset($min)) {
-			$min = $db_events['min_clock'];
+			$min = $dbEvents['min_clock'];
 		}
-		$max = $db_events['max_clock'];
+		$max = $dbEvents['max_clock'];
 	}
 	else {
-		if ($period_start == 0 && $period_end == 0) {
+		if ($startTime == 0 && $endTime == 0) {
 			$max = time();
 			$min = $max - SEC_PER_DAY;
 		}
 		else {
 			$ret['true_time'] = 0;
 			$ret['false_time'] = 0;
-			$ret['true'] = (TRIGGER_VALUE_TRUE == $start_value) ? 100 : 0;
-			$ret['false'] = (TRIGGER_VALUE_FALSE == $start_value) ? 100 : 0;
+			$ret['true'] = (TRIGGER_VALUE_TRUE == $startValue) ? 100 : 0;
+			$ret['false'] = (TRIGGER_VALUE_FALSE == $startValue) ? 100 : 0;
 			return $ret;
 		}
 	}
 
-	$state = $start_value;
+	$state = $startValue;
 	$true_time = 0;
 	$false_time = 0;
 	$time = $min;
-	if ($period_start == 0 && $period_end == 0) {
+	if ($startTime == 0 && $endTime == 0) {
 		$max = time();
 	}
-	if ($period_end == 0) {
-		$period_end = $max;
+	if ($endTime == 0) {
+		$endTime = $max;
 	}
 
 	$rows = 0;
-	$db_events = DBselect(
+	$dbEvents = DBselect(
 		'SELECT e.eventid,e.clock,e.value'.
 		' FROM events e'.
-		' WHERE e.objectid='.zbx_dbstr($triggerid).
+		' WHERE e.objectid='.zbx_dbstr($triggerId).
 			' AND e.source='.EVENT_SOURCE_TRIGGERS.
 			' AND e.object='.EVENT_OBJECT_TRIGGER.
 			' AND e.clock BETWEEN '.$min.' AND '.$max.
 		' ORDER BY e.eventid'
 	);
-	while ($row = DBfetch($db_events)) {
+	while ($row = DBfetch($dbEvents)) {
 		$clock = $row['clock'];
 		$value = $row['value'];
 
@@ -1541,15 +1551,15 @@ function calculate_availability($triggerid, $period_start, $period_end) {
 	}
 
 	if ($rows == 0) {
-		$trigger = get_trigger_by_triggerid($triggerid);
+		$trigger = get_trigger_by_triggerid($triggerId);
 		$state = $trigger['value'];
 	}
 
 	if ($state == TRIGGER_VALUE_FALSE) {
-		$false_time = $false_time + $period_end - $time;
+		$false_time = $false_time + $endTime - $time;
 	}
 	elseif ($state == TRIGGER_VALUE_TRUE) {
-		$true_time = $true_time + $period_end - $time;
+		$true_time = $true_time + $endTime - $time;
 	}
 	$total_time = $true_time + $false_time;
 
