@@ -187,7 +187,8 @@ elseif (isset($_REQUEST['filter_hostid'])) {
 		'monitored' => true,
 		'selectHosts' => API_OUTPUT_EXTEND, // rquired for getting visible host name
 		'filter' => array(),
-		'hostids' => null
+		'hostids' => null,
+		'limit' => $config['search_limit'] + 1
 	);
 
 	/*
@@ -404,10 +405,15 @@ elseif (isset($_REQUEST['filter_hostid'])) {
 	));
 
 	$triggers = API::Trigger()->get($triggerOptions);
+
 	CArrayHelper::sort($triggers, array('host', 'description'));
 
+	$paging = getPagingLine($triggers);
+
 	foreach ($triggers as $trigger) {
-		$availability = calculate_availability($trigger['triggerid'], $_REQUEST['filter_timesince'], $_REQUEST['filter_timetill']);
+		$availability = calculateAvailability($trigger['triggerid'], getRequest('filter_timesince'),
+			getRequest('filter_timetill')
+		);
 
 		$triggerTable->addRow(array(
 			get_node_name_by_elid($trigger['hostid']),
@@ -422,7 +428,7 @@ elseif (isset($_REQUEST['filter_hostid'])) {
 	}
 
 	$reportWidget->addItem(BR());
-	$reportWidget->addItem($triggerTable);
+	$reportWidget->addItem(array($paging, $triggerTable, $paging));
 	$reportWidget->show();
 }
 
